k8s/conbench-cloud-ingress.templ.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Note(JP): we do not seem to use the k8s external DNS mechanism. Terraform
  # logic looks for the corresponding ingress object with the filter
  # `name=conbench-ingress`, and then updates DNS records (via Route 53) behind
  # the scenes to point to the load balancer (ALB) corresponding to this
  # ingress object. That is, the mapping between a specific DNS name and the
  # ALB happens in a different repository.
  name: "conbench-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Introduce the idea of IngressGroup (supported in
    # aws-load-balancer-controller 2.x), via which multiple k8s ingress objects
    # (also spread across multiple k8s namespaces) can configure the _same_ ALB
    # in AWS.
    alb.ingress.kubernetes.io/group.name: cb-alb-group
    # Allow for higher-priority config elsewhere. This can be important for
    # path evaluation rules that need to take precedence (injected in another
    # namespace).
    alb.ingress.kubernetes.io/group.order: "9"
    # Configure health check against Conbench containers.
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /api/ping/
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/success-codes: '200'
    # Configure exposure to Internet - HTTPS only
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    # The ALB "idle timeout" Must be shorter than the TCP conn
    # keepalive-related timeout constant of the other end, see
    # https://github.com/conbench/conbench/issues/1156 -- Note that this is
    # also what is elsewhere called a "request timeout", ALB sends a 504
    # Gateway Timeout if the back-end does not return a response in this time
    # window. That is, let's pick this to be longer than the timeout constant
    # we use in reasonable clients. For example: client: 150 s, ALB idle
    # timeout: 160 s, gunicorn keepalive timeout: 170 s gunicorn worker
    # timeout: 180 s. Also see https://github.com/conbench/conbench/issues/1384
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=160
    alb.ingress.kubernetes.io/certificate-arn: <CERTIFICATE_ARN>
  labels:
    app: conbench-ingress
spec:
  rules:
  - host: <CONBENCH_INTENDED_DNS_NAME>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conbench-service
            port:
              number: 80
